[project]
name = "st-datatables"
version = "0.0.1"
description = "Streamlit custom component: DataTables (React) wrapper"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "junmae" }
]
keywords = ["streamlit", "component", "datatable", "react"]
dependencies = [
    "streamlit>=0.63"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Streamlit",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/junmae/streamlit-datatables-actions"
Source = "https://github.com/junmae/streamlit-datatables-actions"
Issues = "https://github.com/junmae/streamlit-datatables-actions/issues"

[project.optional-dependencies]
devel = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.48.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples", "tests", "e2e"]

[tool.setuptools.package-data]
"st_datatables" = ["frontend/build/**/*"]
